--- a/sunshinedoula/src/app/app.component.html
+++ b/sunshinedoula/src/app/app.component.html
@@ -7,6 +7,9 @@
 </div>
 <h2>Here are some links to help you start: </h2>
 <ul>
+  <app-landing></app-landing>
+</ul>
+<ul>
   <li>
     <h2><a target="_blank" rel="noopener" href="https://angular.io/tutorial">Services</a></h2>
   </li>
